# Orion

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  clippy.toml  config.toml.example  dist-workspace.toml  docker-compose.test.yml  docker-compose.yml  improvements.md  proposal.md  tracker.md
.cargo/: audit.toml
.github/workflows/: ci.yml  crates-publish.yml  docker-release.yml  docs.yml  release.yml
docs/: ai-integration.md  api-reference.md  book.toml  cli.md  configuration.md  connectors.md  features.json  horizontal-scaling.md  kafka.md  mindmap.html  observability.md  production-features.md  use-cases.md
docs/css/: custom.css  plasmatic.css
docs/js/: extra.js
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: admin.md  data.md
docs/src/architecture/: characteristics.md  overview.md
docs/src/configuration/: reference.md
docs/src/features/: availability.md  deployability.md  extensibility.md  maintainability.md  observability.md  resilience.md  scalability.md  security.md
docs/src/tutorials/: cli-setup.md  mcp-setup.md  use-cases.md
migrations/: 001_initial.sql  002_data_api_jobs.sql  003_composite_indexes.sql
migrations/mysql/: 001_initial.sql  002_audit_logs.sql  002_performance_indexes.sql
migrations/postgres/: 001_initial.sql  002_audit_logs.sql  002_performance_indexes.sql
migrations/sqlite/: 001_initial.sql  002_audit_logs.sql
scripts/: generate-project-tasks.sh
src/: errors.rs  lib.rs  main.rs  validation.rs
src/channel/: config.rs  dedup.rs  mod.rs  registry.rs  routing.rs
src/cli/: main.rs
src/cli/commands/: connectors.rs  rules.rs
src/config/: admin_auth.rs  engine.rs  env_overrides.rs  kafka.rs  logging.rs  mod.rs  observability.rs  queue.rs  rate_limit.rs  server.rs  storage.rs  validation.rs
src/connector/: cache_backend.rs  circuit_breaker.rs  lru_cache.rs  masking.rs  mod.rs  mongo_pool.rs  pool_cache.rs  redis_pool.rs  registry.rs  types.rs
src/engine/: mod.rs  utils.rs
src/engine/functions/: cache_read.rs  cache_write.rs  channel_call.rs  connector_helpers.rs  db_read.rs  db_write.rs  enrich.rs  http_call.rs  http_common.rs  mod.rs  mongo_read.rs  publish_kafka.rs
src/kafka/: consumer.rs  producer.rs
src/metrics/: mod.rs
src/queue/: dlq_retry.rs  mod.rs  processing.rs
src/server/: admin_auth.rs  mod.rs  observability.rs  otel.rs  rate_limit.rs  state.rs  tls.rs  trace_context.rs
src/server/routes/: admin.rs  data.rs  mod.rs  openapi.rs  response_helpers.rs
src/server/routes/admin/: audit.rs  backups.rs  channels.rs  connectors.rs  engine.rs  mod.rs  workflows.rs
src/storage/: migration_gen.rs  mod.rs  models.rs  schema.rs
src/storage/repositories/: audit_logs.rs  channels.rs  connectors.rs  helpers.rs  jobs.rs  mod.rs  rules.rs  trace_dlq.rs  traces.rs  workflows.rs
src/validation/: channels.rs  common.rs  connectors.rs  mod.rs  ssrf.rs  workflows.rs
tests/: README.md  admin_connectors_test.rs  admin_rules_test.rs  admin_workflows_test.rs  async_jobs_test.rs  async_trace_edge_test.rs  async_traces_test.rs  audit_log_test.rs  backup_restore_test.rs  channel_call_test.rs  channel_config_test.rs  channel_dedup_test.rs  channel_response_cache_test.rs  circuit_breaker_test.rs  concurrency_test.rs  connector_cache_test.rs  connector_db_test.rs  connector_redis_test.rs  coverage_test.rs  error_paths_test.rs  kafka_test.rs  mongodb_test.rs  mysql_test.rs  openapi_test.rs  pipeline_test.rs  pool_exhaustion_test.rs  postgres_test.rs  rate_limit_test.rs  rest_routing_test.rs  scenario_api_gateway_test.rs  scenario_ecommerce_test.rs  scenario_webhook_test.rs  security_test.rs  shutdown_test.rs  trace_dlq_repo_test.rs  workflow_lifecycle_test.rs
tests/benchmark/: bench.sh
tests/benchmark/fixtures/data/: batch_1.json  batch_10.json  batch_100.json  batch_50.json
tests/benchmark/fixtures/rules/: bench_complex_ecommerce.json
tests/common/: mod.rs
tests/e2e/: helpers.sh  run.sh
tests/e2e/fixtures/rules/: conditional.json  multi_task.json
tests/e2e/suites/: 05_rules_test.sh  07_data_sync.sh  08_data_async.sh  12_full_lifecycle.sh
