[package]
name = "orion-server"
version = "0.1.0"
edition = "2024"
description = "Declarative services runtime powered by dataflow-rs"
license = "Apache-2.0"
repository = "https://github.com/GoPlasmatic/Orion"
homepage = "https://github.com/GoPlasmatic/Orion"

[[bin]]
name = "orion-server"
path = "src/main.rs"

[lib]
name = "orion"
path = "src/lib.rs"

[dependencies]
dataflow-rs = "2.1.1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "tracing", "matched-path"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
tower-http = { version = "0.6", features = ["trace", "cors", "request-id", "propagate-header", "catch-panic"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi", "tracing-log", "env-filter", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
thiserror = "2"
async-trait = "0.1"
datalogic-rs = "4"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
url = "2"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
governor = { version = "0.8", default-features = false, features = ["dashmap", "std"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

# TLS support (gated behind `tls` feature)
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }

# OpenTelemetry (gated behind `otel` feature)
opentelemetry = { version = "0.28", default-features = false, features = ["trace"], optional = true }
opentelemetry_sdk = { version = "0.28", default-features = false, features = ["rt-tokio", "trace"], optional = true }
opentelemetry-otlp = { version = "0.28", default-features = false, features = ["grpc-tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.29", default-features = false, optional = true }

[features]
default = ["swagger-ui", "otel", "kafka"]
swagger-ui = ["utoipa-swagger-ui"]
kafka = ["rdkafka"]
tls = ["dep:axum-server"]
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["kafka"] }
